<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:id="@+id/activity_terms"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="start"
    android:layout_margin="10dp"
    tools:context="com.wma.ozfoodhunter.TermsActivity">

    <com.wma.ozfoodhunter.fonts.TextView_Bold
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Statement and introduction"/>
    <com.wma.ozfoodhunter.fonts.TextView_Regular
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/statement"/>
    <com.wma.ozfoodhunter.fonts.TextView_Bold
        android:textColor="@color/black"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="OZ FOOD HUNTER Website Content"/>
    <com.wma.ozfoodhunter.fonts.TextView_Regular
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/website_content"/>
    <com.wma.ozfoodhunter.fonts.TextView_Bold
        android:textColor="@color/black"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Order placing and processing"/>
    <com.wma.ozfoodhunter.fonts.TextView_Regular
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/order_placing"/>
    <com.wma.ozfoodhunter.fonts.TextView_Bold
        android:textColor="@color/black"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Idemnity"/>
    <com.wma.ozfoodhunter.fonts.TextView_Regular
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/idemnity"/>
    <com.wma.ozfoodhunter.fonts.TextView_Bold
        android:textColor="@color/black"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Order reviews"/>
    <com.wma.ozfoodhunter.fonts.TextView_Regular
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/order_views"/>
    <com.wma.ozfoodhunter.fonts.TextView_Bold
        android:textColor="@color/black"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Liability limitations"/>
    <com.wma.ozfoodhunter.fonts.TextView_Regular
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Liability_limitations"/>


</LinearLayout>
</ScrollView>
