<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.wma.ozfoodhunter.Fragments.AboutUs"
    android:orientation="vertical"
    android:padding="10dp"
    android:weightSum="1">

    <com.wma.ozfoodhunter.fonts.TextView_Regular
        android:layout_weight=".1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/about_us"
        android:textSize="14sp"
        android:textAlignment="center"
        android:textColor="@color/black"/>
    <com.wma.ozfoodhunter.fonts.TextView_Bold
        android:layout_weight=".05"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="Statistics"
        android:textSize="16sp"
        android:textAlignment="center"
        android:textAllCaps="true"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:weightSum="1"
        android:gravity="center"
        android:layout_weight=".25">
        <com.wma.ozfoodhunter.fonts.TextView_Regular
            android:textSize="12sp"
            android:text="@string/about_us_1"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:layout_weight=".3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/circle_green"
            />
        <com.wma.ozfoodhunter.fonts.TextView_Regular
            android:textSize="12sp"
            android:text="@string/about_us_1"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:layout_marginLeft="10dp"
            android:layout_weight=".3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/circle_green"
            />
        <com.wma.ozfoodhunter.fonts.TextView_Regular
            android:textSize="12sp"
            android:text="@string/about_us_1"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:layout_marginLeft="10dp"
            android:layout_weight=".3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/circle_green"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:weightSum="1"
        android:gravity="center"
        android:layout_weight=".25">
        <com.wma.ozfoodhunter.fonts.TextView_Regular
            android:textSize="12sp"
            android:text="@string/about_us_1"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:layout_weight=".3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/circle_green"
            />
        <com.wma.ozfoodhunter.fonts.TextView_Regular
            android:textSize="12sp"
            android:text="@string/about_us_1"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:layout_marginLeft="10dp"
            android:layout_weight=".3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/circle_green"
            />
        <com.wma.ozfoodhunter.fonts.TextView_Regular
            android:textSize="12sp"
            android:text="@string/about_us_1"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:layout_marginLeft="10dp"
            android:layout_weight=".3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/circle_green"
            />

    </LinearLayout>
    <com.wma.ozfoodhunter.fonts.TextView_Bold
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="Who We Are"
        android:textSize="16sp"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:layout_weight=".05"/>

    <com.wma.ozfoodhunter.fonts.TextView_Regular
        android:layout_weight=".3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/who_we_are"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:gravity="start|right"
        android:textAlignment="gravity"

        />

</LinearLayout>
